src/test/resources/semantic/sentences/correct/TC_CONDITIONAL.ru
struct A{
    Int a;
    Bool boolean;
}

impl A{
    .(){
        (nil);
        ("false");
        a=1;

    }
    fn m1(Int c)->void{
        if (true){
            a=1;
            boolean = ++1 >=3;
        }
    }
}
start{
}
